--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
 	"author": "johan.kanefur@mybonus.com",
 	"license": "MIT",
 	"dependencies": {
-		"@rushstack/eslint-patch": "^1.0.3",
-		"@typescript-eslint/eslint-plugin": "^4.2.0",
-		"@typescript-eslint/parser": "^4.2.0",
-		"eslint-config-prettier": "^6.12.0",
+		"@typescript-eslint/eslint-plugin": "^5.40.0",
+		"@typescript-eslint/parser": "^5.40.0",
+		"@typescript-eslint/utils": "^5.40.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-prettier": "^3.1.4"
+		"eslint-plugin-prettier": "^4.2.1"
 	},
 	"peerDependencies": {
-		"eslint": ">= 7",
+		"eslint": ">= 8",
 		"prettier": ">= 2"
 	},
 	"devDependencies": {
-		"eslint": "^7.10.0",
-		"prettier": "^2.1.2",
-		"typescript": "^4.0.3"
+		"eslint": "^8.25.0",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.4"
 	}
 }
