Package: Add @rushstack/eslint-patch
This package makes it possible for eslint to use the dependencies
inside this package, instead of the consuming project/package to pull
in all dependencies that this package needs.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "johan.kanefur@mybonus.com",
 	"license": "MIT",
 	"dependencies": {
+		"@rushstack/eslint-patch": "^1.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
 		"@typescript-eslint/utils": "^5.40.0",
